# slide-deck-generator

./: .env.example  .gitignore  ARCHITECTURE.md  BUSINESS_REQUIREMENTS.md  CLAUDE.md  Performa Deck Generator Architecture.excalidraw  ROM.md  TECHNICAL_SPEC.md  Untitled-2026-03-13-1553.excalidraw  render.yaml
Pre-Sale/: Company Briefing.docx  Proposal.pptx  SAMPLE CLIENT DECK.pptx  SAMPLE REPORT DATA AGG 2.xlsx  SAMPLE REPORT DATA SMA 2.xlsx  intro_transcript.docx
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  compliance.py  deck_builder.py  event_bus.py  market_data.py  orchestrator.py  portfolio.py
backend/app/api/: download.py  generate.py  router.py  upload.py  ws.py
backend/app/models/: enums.py  schemas.py
backend/app/storage/: local.py
backend/app/tools/: chart_builder.py  excel_parser.py  pptx_builder.py
backend/app/tools/slide_builders/: __init__.py  allocation_slide.py  holdings_slides.py  performance_slide.py  rollforward_slide.py  sma_performance_slide.py  sma_stats_slide.py  static_slides.py  title_slide.py
frontend/: package-lock.json  package.json
frontend/public/samples/: SAMPLE HOLDINGS REPORT.xlsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/layout/: left-panel.tsx  main-layout.tsx  right-panel.tsx
frontend/src/components/workflow/: agent-detail-panel.tsx  (+6 more)
frontend/src/hooks/: use-agent-events.ts  use-generation.ts  use-websocket.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/types/: agent.ts  generation.ts
(+5 files in other folders)
